--- a/src/app/core-ui/navbar/navbar.css
+++ b/src/app/core-ui/navbar/navbar.css
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1rem;
+  padding: 1.5rem 1rem;
   height: 3rem;
-  background-color: rgba(213, 213, 213, 0.048);
+  background-color: rgb(50, 50, 50);
 }
 
 .logo img {
-  width: 4rem;
+  width: 4.5rem;
   height: auto;
   border-radius: 100%;
 }
@@ -21,11 +21,11 @@
 
 .navigation .nav-text:active {
   background-color: var(--color);
-  color: #fff;
+  color: #101010;
 }
 
 .navigation .nav-text {
-  --color: #140228;
+  --color: #f2f2f2;
   display: inline-block;
   width: 5.9em;
   height: 2.4em;
@@ -56,7 +56,8 @@
 }
 
 .navigation .nav-text:hover {
-  color: #fff;
+  color: #0f0f0f;
+  font-weight: 600;
 }
 
 .navigation .nav-text:before {
@@ -86,35 +87,42 @@
   display: flex;
   padding: 0;
 }
+
 .line {
   fill: none;
-  stroke: black;
+  stroke: rgb(255, 255, 255);
   stroke-width: 6;
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .line1 {
   stroke-dasharray: 60 207;
   stroke-width: 6;
 }
+
 .line2 {
   stroke-dasharray: 60 60;
   stroke-width: 6;
 }
+
 .line3 {
   stroke-dasharray: 60 207;
   stroke-width: 6;
 }
+
 .opened .line1 {
   stroke-dasharray: 90 207;
   stroke-dashoffset: -134;
   stroke-width: 6;
 }
+
 .opened .line2 {
   stroke-dasharray: 1 60;
   stroke-dashoffset: -30;
   stroke-width: 6;
 }
+
 .opened .line3 {
   stroke-dasharray: 90 207;
   stroke-dashoffset: -134;
@@ -129,36 +137,110 @@
 }
 
 .sidebar {
-  display: none;
-  width: 250px;
+  display: flex;
+  width: 300px;
   height: 100vh;
   position: fixed;
   top: 0;
-  left: -250px;
-  background-color: #f4f4f4;
+  left: -20rem;
+  color: aliceblue;
+  background-color: rgb(50, 50, 50);
   transition: left 0.3s ease;
+  z-index: 1000;
+  padding: 6.7rem 0rem;
+  overflow: hidden;
+}
+
+.sidebar button {
+  display: flex;
+  justify-content: start;
 }
 
 .sidebar.active {
   left: 0;
 }
 
+.sidebar-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+}
+
+.sidebar .nav-text:active {
+  background-color: var(--color);
+  color: #101010;
+}
+
+.sidebar .nav-text {
+  --color: #ffffff;
+  display: flex;
+  width: auto;
+  height: 3.2em;
+  line-height: 2.5em;
+  padding: 0 1rem;
+  position: relative;
+  overflow: hidden;
+  transition: color 0.5s;
+  z-index: 1;
+  font-size: 18px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  color: var(--color);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar .nav-text:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: var(--color);
+  height: 150px;
+  width: 500px;
+  border-radius: 40%;
+}
+
+.sidebar .nav-text:hover {
+  color: #0f0f0f;
+  font-weight: 700;
+  transform: scale(1.1);
+}
+
+.sidebar .nav-text:before {
+  top: 100%;
+  left: 100%;
+  transition: all 0.7s;
+}
+
+.sidebar .nav-text:hover:before {
+  top: -30px;
+  left: -30px;
+}
+
+.sidebar .nav-text:active:before {
+  background: #686868;
+  transition: background 1s;
+}
+
+.close-menu {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
 @media screen and (max-width: 787px) {
   .navbar {
-    align-items: center;
-    justify-content: space-evenly;
-  }
-
-  .logo {
-    margin-bottom: 1rem;
-  }
-
-  .navigation {
-    display: none;
+    justify-content: space-between;
   }
 
   .hamburger-menu {
     display: block;
+  }
+
+  .navigation {
+    display: none;
   }
 
   .sidebar {
