--- a/src/app/core-ui/footer/footer.css
+++ b/src/app/core-ui/footer/footer.css
@@ -1,43 +1,28 @@
 footer {
-  width: 95%;
+  width: auto;
   background-color: rgb(241, 241, 241);
   color: black;
-  padding: 1.5rem 2rem;
-  font-family: 'Poppins', sans-serif;
-}
-
-.upper-footer {
-  display: flex;
-  height: 13rem;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  margin: 2rem 0rem;
-}
-
-.upper-footer-text {
-  font-size: smaller;
-  padding: 1.7rem;
+  padding: .5rem 2rem;
 }
 
 .lower-footer {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: center;
   height: auto;
 }
 
 .copyright-symbol {
   color: #6558f5;
-  font-size: large;
-  font-weight: bold;
+  font-size: larger;
+  font-weight: bolder;
 }
 
 .lower-footer-connect {
   display: flex;
-  font-size: medium;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .social-icon {
@@ -48,19 +33,20 @@ footer {
 .social-wrapper {
   display: inline-flex;
   list-style: none;
-  width: 100%;
+  width: auto;
   font-family: 'Poppins', sans-serif;
   justify-content: center;
+  padding: 0;
 }
 
 .social-wrapper .icon {
   position: relative;
   background: #fff;
   border-radius: 50%;
-  margin: 7px;
-  padding: 20px;
-  width: 50px;
-  height: 50px;
+  margin: 4px 7px;
+  padding: 15px;
+  width: auto;
+  height: auto;
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -151,8 +137,8 @@ footer {
 /* Tablet */
 @media (max-width: 768px) {
   .social-wrapper .icon {
-    width: 40px;
-    height: 40px;
+    width: 1.4rem;
+    height: 1.4rem;
     font-size: 16px;
   }
 }
@@ -160,8 +146,8 @@ footer {
 /* Mobile */
 @media (max-width: 576px) {
   .social-wrapper .icon {
-    width: 30px;
-    height: 30px;
+    width: 1rem;
+    height: 1rem;
     font-size: 14px;
   }
 
