component & core-ui minor styling update on footer & making ourServices template (already responsive)

--- a/src/app/core-ui/footer/footer.css
+++ b/src/app/core-ui/footer/footer.css
@@ -3,6 +3,8 @@ footer {
   background-color: rgb(241, 241, 241);
   color: black;
   padding: .5rem 2rem;
+  position: relative;
+  display: block;
 }
 
 .lower-footer {
