--- a/src/app/core-ui/navbar/navbar.css
+++ b/src/app/core-ui/navbar/navbar.css
@@ -86,6 +86,11 @@
   cursor: pointer;
   display: flex;
   padding: 0;
+  transition: all 0.4s ease-in-out;
+}
+
+.menu:hover {
+  filter: drop-shadow(5px 5px 10px #e6e6e6);
 }
 
 .line {
