--- a/src/app/scenes/plan&Pricing/plan&Pricing.css
+++ b/src/app/scenes/plan&Pricing/plan&Pricing.css
@@ -14,12 +14,6 @@
   align-items: center;
 }
 
-.no-border {
-  border-style: none;
-  text-align: left;
-  width: 30%;
-}
-
 .pricing-table {
   width: 75%;
   height: 100%;
@@ -42,12 +36,64 @@ table {
   border-collapse: collapse;
 }
 
+td:not(:first-child) {
+  transition: all 0.3s ease-in-out;
+}
+
+td:not(:first-child):hover {
+  background-color: rgba(230, 230, 230, 0.064);
+  color: #282828;
+}
+
 td,
 th {
-  border: 1px solid #ddd;
-  padding: 8px;
+  height: 2.8rem;
+  padding: 9px;
+}
+
+tr td:first-child {
+  border: none;
+  text-align: left;
+  font-weight: 500;
+  padding-left: 2rem;
+  width: 40%;
+}
+
+tr td:nth-child(2) {
+  border: 1px solid #ffffff;
+  background-color: rgb(245, 245, 245);
+  font-weight: 500;
+  width: 20%;
+}
+
+tr td:nth-child(3) {
+  border: 1px solid #ffffff;
+  background-color: rgb(198, 198, 198);
+  font-weight: 500;
+  width: 20%;
+}
+
+tr td:nth-child(4) {
+  border: 1px solid #ffffff;
+  background-color: rgb(255, 230, 209);
+  font-weight: 500;
+  width: 20%;
 }
 
 thead tr td {
   font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  tr td:first-child {
+    padding-left: 0;
+  }
+
+  table {
+    width: 100%;
+    
+  }
+  .pricing-plan {
+    padding: 40px 0;
+  }
 }
