--- a/src/app/core-ui/button/button.css
+++ b/src/app/core-ui/button/button.css
@@ -3,10 +3,11 @@
   --color: #560bad;
   font-family: inherit;
   display: inline-block;
-  width: 9em;
-  height: 2.6em;
+  width: auto;
+  height: 2.9em;
   line-height: 2.5em;
-  margin: 20px;
+  margin: 15px;
+  padding: 0 12px;
   position: relative;
   overflow: hidden;
   border: 2px solid var(--color);
@@ -25,7 +26,7 @@
   z-index: -1;
   background: var(--color);
   height: 150px;
-  width: 200px;
+  width: 250px;
   border-radius: 50%;
 }
 
@@ -36,7 +37,7 @@
 .primary-button:before {
   top: 100%;
   left: 100%;
-  transition: all 0.7s;
+  transition: all 0.5s ease-in-out;
 }
 
 .primary-button:hover:before {
