--- a/src/app/core-ui/text/text.css
+++ b/src/app/core-ui/text/text.css
@@ -1,22 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 .header-text {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-optical-sizing: auto;
   font-size: 2rem;
-  font-weight: bolder;
+  font-weight: 800;
 }
 
 .normal-text {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-optical-sizing: auto;
   font-size: 1.2rem;
   font-weight: 600;
 }
 
 .small-text {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-optical-sizing: auto;
   font-size: 0.9rem;
 }
