--- a/src/app/core-ui/navbar/navbar.css
+++ b/src/app/core-ui/navbar/navbar.css
@@ -1,21 +1,40 @@
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 1.5rem 1rem;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999;
+  padding: 1.5rem 0;
   height: 3rem;
-  background-color: rgb(50, 50, 50);
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.833) 0%,
+    rgba(0, 0, 0, 0.497) 56%,
+    rgba(62, 62, 62, 0.041) 94%
+  );
+  transition: top 0.3s;
+}
+
+.navbar-up {
+  top: -6rem;
+}
+
+.navbar-down {
+  top: 0;
 }
 
 .logo img {
-  width: 4.5rem;
+  width: 4rem;
   height: auto;
   border-radius: 100%;
 }
 
 .navigation {
   display: flex;
-  width: 33rem;
+  width: 40rem;
   justify-content: space-between;
 }
 
@@ -27,6 +46,7 @@
 .navigation .nav-text {
   --color: #f2f2f2;
   display: inline-block;
+  text-decoration: none;
   width: 5.9em;
   height: 2.4em;
   line-height: 2.5em;
@@ -34,13 +54,12 @@
   margin: 20px;
   position: relative;
   overflow: hidden;
-  border: 2px solid var(--color);
   transition: color 0.5s;
   z-index: 1;
   font-size: 17px;
   text-align: center;
   border-radius: 6px;
-  font-weight: 500;
+  font-weight: 700;
   color: var(--color);
   cursor: pointer;
 }
@@ -57,7 +76,7 @@
 
 .navigation .nav-text:hover {
   color: #0f0f0f;
-  font-weight: 600;
+  font-weight: 800;
 }
 
 .navigation .nav-text:before {
@@ -143,11 +162,11 @@
 
 .sidebar {
   display: flex;
-  width: 300px;
+  width: 50%;
   height: 100vh;
   position: fixed;
   top: 0;
-  left: -20rem;
+  left: -50%;
   color: aliceblue;
   background-color: rgb(50, 50, 50);
   transition: left 0.3s ease;
@@ -180,6 +199,7 @@
   --color: #ffffff;
   display: flex;
   width: auto;
+
   height: 3.2em;
   line-height: 2.5em;
   padding: 0 1rem;
@@ -238,6 +258,7 @@
 @media screen and (max-width: 787px) {
   .navbar {
     justify-content: space-between;
+    padding: 1rem 0;
   }
 
   .hamburger-menu {
