--- a/src/app/component/header/header.css
+++ b/src/app/component/header/header.css
@@ -1,5 +1,5 @@
 header {
-  width: 100vw;
+  width: 100%;
   height: auto;
 }
 .container {
@@ -7,29 +7,36 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+}
+
+.header-img {
+  width: 100%;
 }
 
 header img {
   width: 100%;
-  height: auto;
-  object-fit: contain;
+  height: 80vh;;
+  object-fit: cover;
 }
 
 .overlay {
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 40%;
   align-items: center;
   text-align: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  background-color: #0000003c;
 }
 
 @media (max-width: 768px) {
   .overlay {
-    width: 50%;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    padding: 0;
   }
 
   .overlay span {
