--- a/src/app/component/header/header.css
+++ b/src/app/component/header/header.css
@@ -2,6 +2,7 @@ header {
   width: 100%;
   height: auto;
 }
+
 .container {
   position: relative;
   display: flex;
@@ -18,7 +19,7 @@ header {
 
 header img {
   width: 100%;
-  height: 80vh;;
+  height: 80vh;
   object-fit: cover;
 }
 
@@ -35,14 +36,19 @@ header img {
 }
 
 .overlay-text {
-  width: 30%;
+  width: 40%;
 }
+
 
 @media (max-width: 768px) {
   .overlay {
     width: 100%;
     height: 100%;
     padding: 0;
+  }
+
+  .overlay-text {
+    width: 50%;
   }
 
   .overlay span {
@@ -57,7 +63,11 @@ header img {
 }
 
 @media (max-width: 576px) {
+  .overlay-text {
+    width: 70%;
+  }
+
   .overlay span {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
