--- a/src/app/scenes/ourServices/ourServices.css
+++ b/src/app/scenes/ourServices/ourServices.css
@@ -4,6 +4,7 @@
   align-items: center;
   height: auto;
   position: relative;
+  background-color: #ebebeb;
 }
 
 .our-services-title {
@@ -15,7 +16,7 @@
 .service-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 2rem 0;
 }
 
@@ -28,19 +29,52 @@
   flex-direction: column;
   align-items: center;
   background-color: #f9f9f9;
-  padding: 20px;
-  border-radius: 10px;
-  transition: all 0.5s ease-in-out;
+  border: solid 2px #0f0f0f;
+  padding: 40px 20px;
+  border-radius: 30px;
+  transition: all 0.6s ease-in-out;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.145);
+}
+
+.service::before {
+  content: 'G1';
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bolder;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 15px;
+  right: 20px;
+  font-size: 2rem;
+  color: rgba(0, 0, 0, 0.1);
+  transition: all 0.6s ease-in-out;
+}
+
+.service:hover::before {
+  transform: translate(-45%, 73%) scale(1.4);
+  font-size: 10rem;
+  color: rgba(255, 255, 255, 0.145);
+}
+
+.service:hover {
+  border: solid 6px #f9f9f9;
+  transform: translateY(-14px);
+  filter: drop-shadow(5px 5px 10px #525252);
 }
 
 .services-img {
   width: 8rem;
   height: 8rem;
+  margin-bottom: 2rem;
   background-color: #d42f13;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: scale(1);
+  transition: all 0.5s ease-in-out;
 }
 
 .service img {
@@ -59,9 +93,12 @@
   margin-top: 15px;
 }
 
-.service:hover {
-  transform: translateY(-10px);
-  filter: drop-shadow(5px 5px 10px #525252);
+.divider {
+  width: 70%;
+  border: 0;
+  border-top: 3px solid #0f0f0f;
+  transition: all 0.4s ease-in-out;
+  margin: 1rem 0;
 }
 
 @media (max-width: 768px) {
@@ -74,4 +111,39 @@
   .service {
     flex: 1 1 100%;
   }
+}
+
+.service.hovered {
+  background-color: #d42f13;
+  color: #f9f9f9;
+}
+
+.service.hovered .bubble {
+  background-color: #f9f9f900;
+  border: 8px solid #f9f9f9;
+}
+
+.service.hovered .services-img {
+  transform: scale(1.15);
+  background-color: #f9f9f9;
+}
+
+.service.hovered .divider {
+  border-top: 3px solid #ffffff;
+  width: 100%;
+}
+
+.blur {
+  filter: blur(5px);
+}
+
+.service.hovered .bubble {
+  background-color: #f9f9f900;
+  border: 8px solid #f9f9f9;
+  pointer-events: none;
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  opacity: 0.4;
 }
