--- a/src/app/scenes/visibilityProduct/visibilityProduct.css
+++ b/src/app/scenes/visibilityProduct/visibilityProduct.css
@@ -8,9 +8,11 @@
 }
 
 .visibility-product-title {
-  height: auto;
-  width: 35%;
+  display: block;
+  height: 5rem;
+  width: 100%;
   align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
@@ -26,7 +28,7 @@
 .visibility {
   width: 25%;
   height: auto;
-  margin: .5rem;
+  margin: 0.5rem;
   height: auto;
   box-sizing: border-box;
   display: flex;
@@ -34,21 +36,21 @@
   align-items: center;
   text-align: center;
   background-color: #f9f9f9;
-  border-radius: 10px;
+  border-radius: 30px;
   overflow: hidden;
-  transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
-  position: relative; 
+  transition: all 0.5s ease-in-out;
+  position: relative;
 }
 
 .visibilitys-img {
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   background-color: #d42f13;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px 10px 0 0; 
-  overflow: hidden; 
+  border-radius: 10px 10px 0 0;
+  overflow: hidden;
 }
 
 .visibility img {
@@ -59,29 +61,35 @@
   justify-content: center;
   display: block;
   filter: blur(0);
-  transition: all 0.5s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 
 .visibility:hover img {
-    filter: blur(1.5px);
-  }
+  filter: blur(1.8px);
+}
+
+.visibility:hover img {
+  transform: scale(1.1);
+}
 
 .visibility-overlay {
-  display: none;
+  display: flex;
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  padding: 0 0rem;
-  background: rgba(0, 0, 0, 0.429);
+  height: 30%;
+  padding: 1rem;
+  background: rgba(12, 12, 12, 0.614);
+  border-radius: 4rem 0 0 0;
   text-shadow: -1px 3px 8px rgba(255, 255, 255, 0.77);
   color: honeydew;
   justify-content: center;
-  transition: opacity 0.5s ease-in-out;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   opacity: 0;
+  transform: translateY(100%) rotateX(-50deg);
+  transition: all 0.5s ease-in-out;
 }
 
 .visibility-text {
@@ -94,26 +102,21 @@
 }
 
 .visibility:hover .visibility-overlay {
-  display: flex;
   opacity: 1;
-}
-
-.visibility:hover img {
-  transform: scale(1.05);
+  transform: translateY(0) rotateX(0);
 }
 
 @media (max-width: 768px) {
   .visibility {
     flex: 1 1 45%;
   }
-
-  .visibility-product-title {
-    width: 90%;
-  }
 }
 
 @media (max-width: 480px) {
   .visibility {
     flex: 1 1 100%;
+  }
+  .visibility-product-title {
+    height: auto;
   }
 }
