--- a/src/app/scenes/ourServices/ourServices.css
+++ b/src/app/scenes/ourServices/ourServices.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: auto;
   position: relative;
-  background-color: #ebebeb;
+  background-color: #fefefe;
 }
 
 .our-services-title {
