--- a/src/app/scenes/ourTechnology/ourTechnology.css
+++ b/src/app/scenes/ourTechnology/ourTechnology.css
@@ -1,4 +1,6 @@
 .our-technology {
+  position: relative;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,7 +8,30 @@
   padding: 40px 20px;
   width: auto;
   height: auto;
-  position: relative;
+  background-color: rgba(0, 0, 0, 0.558);
+  color: azure;
+  box-shadow: inset rgba(60, 70, 85, 0.5) 0px 0px 40px 0px,
+    rgba(0, 0, 0, 0.3) 0px 30px 100px -24px;
+}
+
+.parallax-background {
+  position: absolute;
+  top: -80%;
+  left: 0;
+  width: 100%;
+  height: 140%;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  transition: all 0.5s ease-out;
+}
+
+.our-technology-title {
+  text-align: center;
+  align-items: center;
+  display: block;
+  height: 5rem;
+  width: 100%;
 }
 
 .our-technology-container {
@@ -14,19 +39,16 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
   height: auto;
-}
-
-.our-technology-title {
-  text-align: center;
-  align-items: center;
-  height: 5rem;
+  padding: 30px 20px;
+  position: relative;
+  z-index: 2;
 }
 
 .our-technology-img {
-  width: 30%;
+  width: 40%;
   height: auto;
   display: flex;
   justify-content: center;
@@ -34,7 +56,8 @@
 }
 
 .our-technology-img img {
-  width: 100%;
+  width: 80%;
+  border-radius: 20px;
   height: auto;
   object-fit: cover;
   min-width: 20rem;
@@ -43,7 +66,7 @@
 .our-technology-text {
   width: 45%;
   height: auto;
-  padding: 4rem 2rem;
+  padding: 4rem 1rem;
   display: flex;
   justify-content: left;
   flex-direction: column;
