scenes plan & pricing update table hover fixing first child hover

--- a/src/app/scenes/plan&Pricing/plan&Pricing.css
+++ b/src/app/scenes/plan&Pricing/plan&Pricing.css
@@ -56,23 +56,11 @@ tr td:first-child {
   width: 40%;
 }
 
-tr td:nth-child(2) {
-  border: 1px solid #ffffff;
-  background-color: rgb(245, 245, 245);
-  font-weight: 500;
-  width: 20%;
-}
-
-tr td:nth-child(3) {
-  border: 1px solid #ffffff;
-  background-color: rgb(198, 198, 198);
-  font-weight: 500;
-  width: 20%;
-}
-
+tr td:nth-child(2),
+tr td:nth-child(3),
 tr td:nth-child(4) {
   border: 1px solid #ffffff;
-  background-color: rgb(255, 230, 209);
+  background-color: rgb(245, 245, 245);
   font-weight: 500;
   width: 20%;
 }
@@ -81,20 +69,23 @@ thead tr td {
   font-weight: bold;
 }
 
-td:hover,
+thead tr:first-child:hover, thead td:first-child:hover {
+  background-color: #ffffff00;
+}
+
+tr:first-child:hover {
+  background-color: #e9000094;
+}
+
 tr:hover {
-  background-color: rgba(255, 0, 0, 0.468);
-  color: #282828;
+  background-color: rgba(255, 0, 0, 0.655);
+  color: #000000;
 }
 
 th:hover,
 tr td:hover {
-  background-color: rgba(255, 0, 0, 0.947);
+  background-color: rgba(255, 0, 0, 0.638);
   color: #ffffff;
-}
-
-td:first-child :hover {
-  background-color: #fff;
 }
 
 @media (max-width: 768px) {
