--- a/src/app/scenes/ourTechnology/ourTechnology.css
+++ b/src/app/scenes/ourTechnology/ourTechnology.css
@@ -8,7 +8,7 @@
   padding: 40px 20px;
   width: auto;
   height: auto;
-  background-color: rgba(0, 0, 0, 0.558);
+  background-color: rgba(0, 0, 0, 0.666);
   color: azure;
   box-shadow: inset rgba(60, 70, 85, 0.5) 0px 0px 40px 0px,
     rgba(0, 0, 0, 0.3) 0px 30px 100px -24px;
@@ -16,7 +16,7 @@
 
 .parallax-background {
   position: absolute;
-  top: -80%;
+  top: -90%;
   left: 0;
   width: 100%;
   height: 140%;
@@ -24,6 +24,11 @@
   background-position: center;
   z-index: -1;
   transition: all 0.5s ease-out;
+}
+
+.parallax-background img {
+  width: 100%;
+  height: 140%;
 }
 
 .our-technology-title {
@@ -103,7 +108,7 @@
   }
 
   .our-technology-text {
-    width: 80%;
+    width: 60%;
     padding: 1.5rem 1rem;
   }
 }
