--- a/src/app/scenes/contactUs/contactUs.css
+++ b/src/app/scenes/contactUs/contactUs.css
@@ -1,9 +1,11 @@
 .contact-us {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: auto;
-  height: 12rem;
+  height: 15rem;
+  background-color: rgb(225, 225, 225);
 }
 
 .contact-us-button {
