--- a/src/app/scenes/contactUs/contactUs.css
+++ b/src/app/scenes/contactUs/contactUs.css
@@ -1,16 +1,26 @@
 .contact-us {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: auto;
+  align-items: center;
+  text-align: center;
+  width: 100%;
   height: 15rem;
-  background-color: rgb(225, 225, 225);
+  overflow: hidden;
+  background-image: url('https://img.freepik.com/free-vector/stylish-hexagonal-line-pattern-background_1017-19742.jpg');
+  background-position: fixed;
+  background-repeat: repeat-x;
+  background-size: contain;
+}
+
+.contact-us-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .contact-us-button {
-  width: 20rem;
+  width: auto;
   height: 3rem;
   font-size: 10px;
-  padding: 20px;
 }
