--- a/src/app/core-ui/navbar/navbar.css
+++ b/src/app/core-ui/navbar/navbar.css
@@ -11,9 +11,9 @@
   background: rgb(0, 0, 0);
   background: linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.833) 0%,
+    rgba(0, 0, 0, 0.833) 3%,
     rgba(0, 0, 0, 0.497) 56%,
-    rgba(62, 62, 62, 0.041) 94%
+    rgba(36, 36, 36, 0) 94%
   );
   transition: top 0.3s;
 }
@@ -36,6 +36,10 @@
   display: flex;
   width: 40rem;
   justify-content: space-between;
+}
+
+.navigation a {
+  text-decoration: none;
 }
 
 .navigation .nav-text:active {
@@ -93,6 +97,12 @@
 .navigation .nav-text:active:before {
   background: #686868;
   transition: background 1s;
+}
+
+.active {
+  background-color: rgba(255, 255, 255, 0.957);
+  color: #0f0f0f !important;
+  transform: scale(1.1);
 }
 
 .hamburger-menu {
@@ -163,15 +173,21 @@
 .sidebar {
   display: flex;
   width: 50%;
-  height: 100vh;
+  height: 100%;
   position: fixed;
-  top: 0;
+  top: 40px;
   left: -50%;
   color: aliceblue;
-  background-color: rgb(50, 50, 50);
+  justify-content: center;
+  background: linear-gradient(
+    135deg,
+    rgba(50, 50, 50, 1) 0%,
+    rgba(30, 30, 30, 1) 100%
+  );
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transition: left 0.3s ease;
   z-index: 1000;
-  padding: 6.7rem 0rem;
+  padding: 4.5rem 0rem;
   overflow: hidden;
 }
 
@@ -182,6 +198,7 @@
 
 .sidebar.active {
   left: 0;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
 }
 
 .sidebar-content {
@@ -190,16 +207,10 @@
   gap: 0rem;
 }
 
-.sidebar .nav-text:active {
-  background-color: var(--color);
-  color: #101010;
-}
-
 .sidebar .nav-text {
   --color: #ffffff;
   display: flex;
   width: auto;
-
   height: 3.2em;
   line-height: 2.5em;
   padding: 0 1rem;
@@ -222,6 +233,7 @@
   position: absolute;
   z-index: -1;
   background: var(--color);
+  text-decoration: none;
   height: 150px;
   width: 500px;
   border-radius: 40%;
@@ -246,7 +258,7 @@
 
 .sidebar .nav-text:active:before {
   background: #686868;
-  transition: background 1s;
+  transition: all .7s;
 }
 
 .close-menu {
