--- a/src/app/scenes/ourTechnology/ourTechnology.css
+++ b/src/app/scenes/ourTechnology/ourTechnology.css
@@ -20,10 +20,10 @@
   left: 0;
   width: 100%;
   height: 140%;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   z-index: -1;
-  transition: all 0.5s ease-out;
+  transition: all .1s ease-out;
 }
 
 .parallax-background img {
