--- a/src/app/scenes/ourTechnology/ourTechnology.css
+++ b/src/app/scenes/ourTechnology/ourTechnology.css
@@ -16,14 +16,14 @@
 
 .parallax-background {
   position: absolute;
-  top: -90%;
+  top: -80%;
   left: 0;
   width: 100%;
-  height: 140%;
-  background-size: contain;
+  height: 130%;
+  background-size: cover;
   background-position: center;
   z-index: -1;
-  transition: all .1s ease-out;
+  transition: all 0.1s ease-out;
 }
 
 .parallax-background img {
@@ -53,15 +53,15 @@
 }
 
 .our-technology-img {
-  width: 40%;
+  width: 35%;
   height: auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: end;
 }
 
 .our-technology-img img {
-  width: 80%;
+  width: 70%;
   border-radius: 20px;
   height: auto;
   object-fit: cover;
@@ -69,13 +69,14 @@
 }
 
 .our-technology-text {
-  width: 45%;
+  width: 30%;
   height: auto;
-  padding: 4rem 1rem;
+  padding: 3rem 1rem;
   display: flex;
-  justify-content: left;
+  justify-content: start;
+  align-items: start;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.5rem;
 }
 
 @media (max-width: 1024px) {
